--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.4.2"
+    "lodash": "^4.17.4",
+    "vue": "^2.4.2",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
