--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "Mikael Hallendal <mikael.hallendal@cag.se>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "lodash": "^4.17.4",
     "vue": "^2.4.2",
     "vuex": "^2.4.0"
